fix modal window on mobile and fix horizontal scroll on mobile devices

--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -6,11 +6,6 @@
 }
 
 @media only screen and (max-width: 960px) {
-  .logoBanner {
-    position: absolute !important;
-    left: 20px;
-    top: 20px;
-  }
 }
 
 @media (min-width: 0px) and (max-width: 449px) {
